# misogi-w4d3

./: .gitignore  README.md
discord_bot_mcp/: .env.example  README.md  pyproject.toml  test_mcp_inspector.py
discord_bot_mcp/discord_mcp/: __init__.py  __main__.py  audit_logger.py  auth.py  config.py  discord_client.py  rate_limiter.py  server.py
discord_bot_mcp/tests/: __init__.py  test_auth.py  test_rate_limiter.py
plagiarism_detector/: .env.example  README.md  app.py  embedding_models.py  requirements.txt  similarity_analyzer.py  test_app.py  text_preprocessor.py
questions/: q1.md  q2.md  q3.md
rag_chunking_visualizer/: README.md  app.py  chunk_analyzer.py  chunking_strategies.py  pdf_processor.py  requirements.txt  test_app.py  visualization_engine.py
